@@ -1,3 +1,8 @@
+2015-01-27  Jan Hubicka  <hubicka@ucw.cz>
+
+	PR ipa/64282
+	* g++.dg/torture/pr64282.C: New testcase.
+
 2015-01-27  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>
 
 	* gcc.target/aarch64/store-pair-1.c: Update scan-assembler to check
